<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Local">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_Localidade"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/txt_local"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_endereco"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_descricaomanutencao2"
                android:layout_width="match_parent"
                android:layout_height="247dp"
                android:text="Endereço: Rua do Esporte

        \nBairro: Jardim Guaracy

        \nCidade: Guarulhos

        \nEstado: São Paulo

        \nSigla Estado: SP

        \nPaís: Brasil

        \nEndereço Completo:
        \nRua do Esporte, Jardim Guaracy, Guarulhos, São Paulo- CEP 07262208

        \nLongitude IBGE: -46.3899681

        \nLatitude IBGE: -23.480252"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_cliqueaqui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_cliqueaqui"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_mapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="Clique aqui"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>